[gd_scene load_steps=2 format=2]

[ext_resource path="res://ext/ext_screen_sky/ext_main.gd" type="Script" id=1]

[node name="ext_main" type="WindowDialog"]
margin_right = 384.0
margin_bottom = 272.0
popup_exclusive = true
window_title = "Screen Sky"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_screen" type="OptionButton" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 368.0
margin_bottom = 48.0
text = "Disable"
align = 1
items = [ "Disable", null, false, 0, null, "Sky", null, false, 1, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_time" type="Label" parent="."]
margin_left = 16.0
margin_top = 64.0
margin_right = 128.0
margin_bottom = 96.0
text = "Time"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slider_time" type="HSlider" parent="lbl_time"]
margin_left = 112.0
margin_right = 352.0
margin_bottom = 32.0
focus_mode = 0
max_value = 1440.0
value = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_cloud_coverage" type="Label" parent="."]
margin_left = 16.0
margin_top = 96.0
margin_right = 114.0
margin_bottom = 128.0
text = "Cloud Coverage"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slider_clouds_coverage" type="HSlider" parent="lbl_cloud_coverage"]
margin_left = 112.0
margin_right = 352.0
margin_bottom = 32.0
focus_mode = 0
max_value = 1.0
step = 0.01
value = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_cloud_size" type="Label" parent="."]
margin_left = 16.0
margin_top = 128.0
margin_right = 128.0
margin_bottom = 160.0
text = "Cloud Size"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slider_clouds_size" type="HSlider" parent="lbl_cloud_size"]
margin_left = 112.0
margin_right = 352.0
margin_bottom = 32.0
focus_mode = 0
max_value = 10.0
step = 0.01
value = 2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_wind_strength" type="Label" parent="."]
margin_left = 16.0
margin_top = 160.0
margin_right = 106.0
margin_bottom = 192.0
text = "Wind Strength"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wind_strength" type="HSlider" parent="lbl_wind_strength"]
margin_left = 112.0
margin_right = 352.0
margin_bottom = 32.0
focus_mode = 0
max_value = 1.0
step = 0.01
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="."]
margin_left = 16.0
margin_top = 192.0
margin_right = 368.0
margin_bottom = 208.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_ok" type="Button" parent="."]
margin_left = 304.0
margin_top = 224.0
margin_right = 368.0
margin_bottom = 256.0
focus_mode = 0
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="item_selected" from="btn_screen" to="." method="_on_btn_screen_item_selected"]
[connection signal="value_changed" from="lbl_time/slider_time" to="." method="_on_slider_time_value_changed"]
[connection signal="value_changed" from="lbl_cloud_coverage/slider_clouds_coverage" to="." method="_on_slider_clouds_coverage_value_changed"]
[connection signal="value_changed" from="lbl_cloud_size/slider_clouds_size" to="." method="_on_slider_clouds_size_value_changed"]
[connection signal="value_changed" from="lbl_wind_strength/wind_strength" to="." method="_on_wind_strength_value_changed"]
[connection signal="pressed" from="btn_ok" to="." method="_on_btn_ok_pressed"]
